# dune-phasefield

./: .gitignore  Makefile.am  README  TODO.txt  configure.ac  dune-phasefield.pc.in  dune.module  removebackupfiles.sh
dune/fem/operator/: Makefile.am  Makefile.in  allencahndiscretemodel.hh  allencahndiscretemodelvelo.hh  allencahnoperator.hh  defaultmodel.hh  discretemodelcommon.hh  explicitwbdiscretemodel.hh  fluxdiscretemodel.hh  fluxoperator.hh  fluxprojdiscretemodel.hh  fluxprojoperator.hh  gradientdiscretemodel.hh  implicitwbdiscretemodel.hh  primaldiscretemodel.hh  projectiondiscretemodelcommon.hh  thetadiscretemodel.hh  wbsplitoperator.hh  wellbalanceddiscretemodel.hh  wellbalancedoperator.hh
dune/fem/operator/assembled/: Makefile.am  Makefile.in  acmodel.hh  acmodel2d.hh  boundary.hh  constantvelomodel.hh  debugoperator.hh  energyconverter.hh  femoperator.hh  filtertest.cc  flux.hh  fluxRho.hh  fulloperator.cc  fulloperator3.cc  fulloperatorExpl.cc  fulloperatorInvRho.cc  fulloperatorNSK.cc  fulloperatorRho.cc  fulloperatorRhoAlpha.cc  fulloperatorimpl.cc  heatmodel.hh  integrator.hh  jacobianflux.hh  localfdinterface.hh  localfdoperator.hh  localfdoperatorVersion.hh  localfdoperatorVersionPar.hh  localfdoperator_2.hh  localfdoperator_parallel.hh  localfdoperatorwithVisit.hh  localopinterface.hh  matrixhelper.hh  matrixhelper_vector.hh  matrixoperator.hh  mixedopcoupling.hh  mixedoperator.hh  mixedopjacobian.hh  mixedopjacobian_nofilter.hh  mixedopjacvisit.hh  model.hh  (+12 more)
dune/fem/operator/assembled/Codegen/: acelCouplings1d_CODEGEN.c  acelCouplings2d_CODEGEN.c  acisCouplings1d_CODEGEN.c  acisCouplings2d_CODEGEN.c  elementCouplings1d_lambda_CODEGEN.c  elementCouplings2d_CODEGEN.c  elementCouplings2d_lambda_CODEGEN.c  generateCouplings.py  generateLambdaCouplings.py  generateNskCouplings.py  generateSplitCouplings.py  generateSplitCouplingsVector.py  intersectionCouplings1d_CODEGEN.c  intersectionCouplings1d_lambda_CODEGEN.c  intersectionCouplings2d_CODEGEN.c  intersectionCouplings2d_lambda_CODEGEN.c  nsk_element_1d_CODEGEN.c  nsk_element_2d_CODEGEN.c  nsk_intersection_1d_CODEGEN.c  nsk_intersection_2d_CODEGEN.c  nvstelCouplings1d_CODEGEN.c  nvstelCouplings2d_CODEGEN.c  nvstisCouplings1d_CODEGEN.c  nvstisCouplings2d_CODEGEN.c
dune/fem/operator/assembled/fluxes/: Makefile.am  flux.hh  flux.hh.old  flux2.hh  fluxAlpha.hh  (+9 more)
dune/fem/operator/common/: Makefile.am  automaticdifferenceoperator.hh
dune/fem/operator/korteweg/: Makefile.am  kortewegdiscretemodel.hh  kortewegoperator.hh  mudiscretemodel.hh
dune/phasefield/modelling/CoquelTaylorSources/: Makefile.am  coquelTaylorCODEGEN.mpl  coquelTaylorCODEGEN.mw  coquelTaylorMCODEGEN.mpl  coquelTaylorMCODEGEN.mw  coquelTaylorMRho.cc  coquelTaylorMSource.cc  coquelTaylorMmaple.cc  coquelTaylorRho.cc  coquelTaylormaple.cc  correctioncoquelTaylorCODEGEN.mpl  correctioncoquelTaylorCODEGEN.mw  makefile  maple.cc  realCODEGEN.mpl  realCODEGEN.mw  realRho.cc  realmaple.cc  stiffenedgasCODEGEN.mpl  stiffenedgasCODEGEN.mw  stiffenedgasRho.cc  stiffenedgasmaple.cc
src/problems/1dphase/: Makefile  Makefile.am  Makefile.in  constantproblem.hh  energy.gp  exactproblem.hh  heatproblem.hh  makeall.sh  makecon.sh  makenoncon.sh  parameter  parameter_wb  perfectgas_problem.hh  phasewavesellipse.hh  phasewavesold.hh  physics.hh  problem1d.hh  problemcreator.hh  problemtype.hh  rhophysics.hh  standardmodel.hh  tanhproblem.hh  tanhproblembalanced.hh  test.py  thermodynamicswb.hh  travellingwave.hh  wellbalancedmodel.hh  wellbalancedphysics.hh
src/problems/1dphase/.deps/: newphasefield_wb-phasefield.Po  newphasefield_wb-phasefield_pol.Po  phasefield-phasefield.Po  phasefield-phasefield_pol.Po  phasefield_nc-phasefield.Po  phasefield_nc-phasefield_pol.Po  phasefield_wb-phasefield.Po  phasefield_wb-phasefield_pol.Po
src/problems/1dphase/paramFiles/: paramBase  paramConstant
src/problems/allencahn/: Makefile.am  Makefile.in  acproblemcreator.hh  allencahnproblem.hh  makeP012.sh  parameter  problemtype.hh  tanhproblem.hh
src/problems/allencahn/paramFiles/: Makefile  Makefile.in  paramBase  paramPhysicalConstants  paramSolver
src/problems/korteweg/: Makefile.am  flags.p  nskproblemcreator.hh  parameter  problemtype.hh  progs.txt  rungui.py  tanhproblem.hh
src/problems/korteweg/paramFiles/: paramBase  paramSolver
src/problems/kortewegmixed/: Makefile.am  flags.p  mixednskproblemcreator.hh  parameter  progs.txt
src/problems/kortewegmixed/paramFiles/: paramBase
src/problems/mixedscheme/: 1bubble.txt  2bubbles.txt  2bubbles2.txt  2dheatproblem.hh  Arungui.py  Makefile.am  Makefile.in  acproblem.hh  balanced.cc  balancedh.c  bubbleensemble.hh  bubbleensemble1.hh  bubbleensemble2.hh  compiled.p  datadescription.txt  datareadproblem.hh  deltarungui.py  dropletensemble.hh  flags.p  handleproblem.hh  heatproblem.hh  heatproblem15d.hh  kdiffrun.py  makeall.py  makegui.py  manufacturedproblem.hh  mixedproblemcreator.hh  mixproblem.hh  mixproblem2d.hh  mixtureproblem.hh  oldproblem.hh  packme.py  parameter  parameter_gui  parameter_script  problemcreator.hh  progs.txt  run2.sh  rungui.py  sharpproblem.hh  (+7 more)
src/problems/mixedscheme/InputFiles/: 1bubble.txt  2bubbles3.txt  bubble.txt  rhovphi.pvsm
src/problems/mixedscheme/paramFiles/: .paramBase.swp  .paramSolver.swp  paramBase  paramBase_gui  paramBase_script  paramSolver  paramSolver_gui  paramSolver_script
src/problems/mixedscheme/skripts/: deltarun.py  kdiffrun.py  makegmres.sh  run.sh  runall.py
src/problems/mixedscheme/sourceprobCODEGEN/: balanced.cc  balancedh.cc
src/problems/passscheme/: Makefile.am  bubbleproblem.hh  make1dtransport.sh  makeall.py  makecon.sh  makedim12.sh  makenoncon.sh  makerun  paramBase  parameter  parameter_gui  phasefieldprobleminterface.hh  problemcreator.hh  problemtype.hh  progs.txt  tanhproblem2.hh  tanhproblembalanced.hh  travellingwave.hh
src/problems/passscheme/InputFiles/: 2bubbles.txt
src/problems/passscheme/paramFiles/: paramBase  paramPhysics  paramSolver
src/problems/passscheme/skripts/: makeall.py  makeall.sh  makeall2.sh  runall.py
(+425 files in other folders)
