SUBDIRS = assembled
operatordir = $(top_srcdir)/dune/fem/operator
operator_HEADERS =	discretemodelcommon.hh \
										explicitwbdiscretemodel.hh \
										fluxdiscretemodel.hh \
										fluxoperator.hh \
										fluxprojdiscretemodel.hh \
										fluxprojoperator.hh \
										gradientdiscretemodel.hh \
										impclicitwbdiscretemodel.hh \
										projectiodiscretemodelcommon.hh \
										thetadiscretemodel.hh \
										wbsplitoperator \
										wellbalanceddiscretemodel.hh \
										wellbalancedoperator.hh 
include $(top_srcdir)/am/global-rules
