SUBDIRS = assembled common korteweg
operatordir = $(top_srcdir)/dune/fem/operator
operator_HEADERS =	allencahndiscretemodel.hh \
										allencahndiscretemodelvelo.hh \
										allencahnoperator.hh \
										discretemodelcommon.hh \
										fluxdiscretemodel.hh \
										fluxoperator.hh \
										fluxprojdiscretemodel.hh \
										fluxprojoperator.hh \
										gradientdiscretemodel.hh \
										primaldiscretemodel.hh\
										projectiondiscretemodelcommon.hh \
										thetadiscretemodel.hh \
										wellbalanceddiscretemodel.hh \
										wellbalancedoperator.hh 
include $(top_srcdir)/am/global-rules
