# install these headers

#USE_OMP=-fopenmp

LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS) $(LOCAL_LIBS) $(DUNEMPILDFLAGS) $(DUNEMPILIBS) 

BASEDIR=../../../dune/fem/main

SOURCES = $(BASEDIR)/phasefield.cc


GRIDTYPE = ALUGRID_CUBE
#GRIDTYPE = ALUGRID_SIMPLEX
#GRIDTYPE = SPGRID
#GRIDTYPE = ALUGRID_CONFORM
#GRIDTYPE = ALBERTAGRID
GRIDDIM = 2 
POLORDER = 2 
PROBLEM = 1 # check ./problemtype.hh
THERMO = 1
FLUX = 1 # check ./problemcreator.hh

AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) \
              -DPROBLEM=$(PROBLEM) -D$(GRIDTYPE) $(DUNEMPICPPFLAGS) -DFEMTIMER \
              -DFLUX=$(FLUX) 
AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              

check_PROGRAMS = phasefield phasefield_fd phasefield_Time phasefield_fdTime 

phasefield_SOURCES = $(SOURCES)
phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DCOUPLING -DTAYLOR -DEOC

phasefield_Time_SOURCES = $(SOURCES)
phasefield_Time_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DCOUPLING -DTAYLOR

phasefield_fd_SOURCES = $(SOURCES) 
phasefield_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DFD -DTAYLOR -DEOC

phasefield_fd_SOURCES = $(SOURCES) 
phasefield_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DFD -DTAYLORR


#phasefield_fd_dq_SOURCES = $(SOURCES)
#phasefield_fd_dq_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DFD -DDIFFQUOT -DIMPLICITTAU

#phasefield_fd_tl_SOURCES = $(SOURCES)
#phasefield_fd_tl_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DFD -DTAYLOR -DIMPLICITTAU



#phasefield_split_fd_SOURCES = $(SOURCES)
#phasefield_split_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE  -DFD -DSPLIT -DIMPLICITTAU

#phasefield_split_fd_dq_SOURCES = $(SOURCES)
#phasefield_split_fd_dq_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE  -DFD -DDIFFQUOT -DSPLIT -DIMPLICITTAU

#phasefield_split_fd_tl_SOURCES = $(SOURCES)
#phasefield_split_fd_tl_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE  -DFD -DTAYLOR -DSPLIT -DIMPLICITTAU


#phasefield_ub_split_SOURCES = $(SOURCES)
#phasefield_ub_split_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DCOUPLING -DSPLIT -DIMPLICITTAU

#phasefield_lambda_SOURCES = $(SOURCES) 
#phasefield_lambda_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DRHOMODEL -DLAMBDASCHEME -DCOUPLING -DIMPLICITTAU

#phasefieldmfree_SOURCES = $(SOURCES) 
#phasefieldmfree_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DMATRIXFREE 

#phasefieldoem_SOURCES = $(SOURCES) 
#phasefieldoem_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED  

#phasefieldparagrid_SOURCES = $(SOURCES) 
#phasefieldparagrid_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DNOFILTER -DPARAGRID 

















DISTCHECK_CONFIGURE_FLAGS = DOXYGEN="true"


EXTRA_DIST = paramFiles/param*

CLEANFILES = manager.*.log *.out 

PROG=phase

include $(top_srcdir)/am/global-rules
